--- a/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
@@ -120,11 +120,6 @@
                                                             <Setter Target="HoverContent.Visibility" Value="Visible" />
                                                         </VisualState.Setters>
                                                     </VisualState>
-                                                    <VisualState x:Name="Pressed">
-                                                        <VisualState.Setters>
-                                                            <Setter Target="HoverContent.Visibility" Value="Collapsed" />
-                                                        </VisualState.Setters>
-                                                    </VisualState>
                                                 </VisualStateGroup>
                                             </VisualStateManager.VisualStateGroups>
 
@@ -135,18 +130,36 @@
                                             <Grid x:Name="HoverContent" 
                                                   Background="#CC000000" 
                                                   Visibility="Collapsed"
-                                                  CornerRadius="12">
+                                                  CornerRadius="12"
+                                                  IsHitTestVisible="False">
                                                 <ContentPresenter Content="{Binding}">
                                                     <ContentPresenter.ContentTemplate>
                                                         <DataTemplate>
-                                                            <Grid>
+                                                            <Grid Background="Transparent">
                                                                 <Grid.RowDefinitions>
                                                                     <RowDefinition Height="*"/>
                                                                     <RowDefinition Height="Auto"/>
                                                                 </Grid.RowDefinitions>
 
                                                                 <!-- Product Details -->
-                                                                <StackPanel Grid.Row="0" Margin="20" VerticalAlignment="Center">
+                                                                <StackPanel Grid.Row="0" 
+                                                                          Margin="20,10,20,20" 
+                                                                          VerticalAlignment="Top">
+                                                                    <Button Style="{ThemeResource AccentButtonStyle}"
+                                                                            Background="#28A745"
+                                                                            Foreground="White"
+                                                                            Padding="16,8"
+                                                                            CornerRadius="4"
+                                                                            Command="{Binding AddSpecCommand}"
+                                                                            IsTabStop="True"
+                                                                            Margin="0,0,0,10"
+                                                                            HorizontalAlignment="Center">
+                                                                        <StackPanel Orientation="Horizontal">
+                                                                            <FontIcon Glyph="&#xE710;" FontSize="12"/>
+                                                                            <TextBlock Text="Thêm cấu hình" Margin="8,0,0,0"/>
+                                                                        </StackPanel>
+                                                                    </Button>
+                                                                    
                                                                     <TextBlock Text="{Binding ModelName}" 
                                                                              FontWeight="SemiBold" 
                                                                              FontSize="20"
@@ -155,7 +168,8 @@
                                                                              TextAlignment="Center"
                                                                              Margin="0,0,0,20"/>
 
-                                                                    <Grid ColumnSpacing="12" RowSpacing="12">
+                                                                    <Grid ColumnSpacing="12" 
+                                                                          RowSpacing="12">
                                                                         <Grid.ColumnDefinitions>
                                                                             <ColumnDefinition Width="Auto"/>
                                                                             <ColumnDefinition Width="*"/>
@@ -235,10 +249,13 @@
                                                                           Orientation="Horizontal" 
                                                                           HorizontalAlignment="Center"
                                                                           Margin="0,0,0,20"
-                                                                          Spacing="12">
+                                                                          Spacing="12"
+                                                                          IsHitTestVisible="True">
                                                                     <Button Style="{ThemeResource AccentButtonStyle}"
                                                                             Padding="16,8"
-                                                                            CornerRadius="4">
+                                                                            CornerRadius="4"
+                                                                            Command="{Binding EditCommand}"
+                                                                            IsTabStop="True">
                                                                         <StackPanel Orientation="Horizontal">
                                                                             <FontIcon Glyph="&#xE70F;" FontSize="12"/>
                                                                             <TextBlock Text="Chỉnh sửa" Margin="8,0,0,0"/>
@@ -247,7 +264,9 @@
                                                                     <Button Background="#E81123"
                                                                             Foreground="White"
                                                                             Padding="16,8"
-                                                                            CornerRadius="4">
+                                                                            CornerRadius="4"
+                                                                            Command="{Binding DeleteCommand}"
+                                                                            IsTabStop="True">
                                                                         <StackPanel Orientation="Horizontal">
                                                                             <FontIcon Glyph="&#xE74D;" FontSize="12"/>
                                                                             <TextBlock Text="Xóa" Margin="8,0,0,0"/>
@@ -441,8 +460,22 @@
                                                       Margin="0,24,0,0"
                                                       Spacing="12">
                                                 <Button Style="{ThemeResource AccentButtonStyle}"
+                                                        Background="#28A745"
+                                                        Foreground="White"
                                                         Padding="16,8"
-                                                        CornerRadius="4">
+                                                        CornerRadius="4"
+                                                        Command="{Binding AddSpecCommand}"
+                                                        IsTabStop="True">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <FontIcon Glyph="&#xE710;" FontSize="12"/>
+                                                        <TextBlock Text="Thêm cấu hình" Margin="8,0,0,0"/>
+                                                    </StackPanel>
+                                                </Button>
+                                                <Button Style="{ThemeResource AccentButtonStyle}"
+                                                        Padding="16,8"
+                                                        CornerRadius="4"
+                                                        Command="{Binding EditCommand}"
+                                                        IsTabStop="True">
                                                     <StackPanel Orientation="Horizontal">
                                                         <FontIcon Glyph="&#xE70F;" FontSize="12"/>
                                                         <TextBlock Text="Chỉnh sửa" Margin="8,0,0,0"/>
@@ -451,7 +484,9 @@
                                                 <Button Background="#E81123"
                                                         Foreground="White"
                                                         Padding="16,8"
-                                                        CornerRadius="4">
+                                                        CornerRadius="4"
+                                                        Command="{Binding DeleteCommand}"
+                                                        IsTabStop="True">
                                                     <StackPanel Orientation="Horizontal">
                                                         <FontIcon Glyph="&#xE74D;" FontSize="12"/>
                                                         <TextBlock Text="Xóa" Margin="8,0,0,0"/>
@@ -485,4 +520,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Page> 
+</Page>
