--- a/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
@@ -8,6 +8,7 @@
     xmlns:local="using:StormPC.Views.BaseData"
     xmlns:sharedControls="using:StormPC.Controls"
     mc:Ignorable="d"
+    x:Name="page"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
@@ -89,6 +90,7 @@
             <ScrollViewer>
                 <GridView x:Name="productsGridView"
                          ItemsSource="{x:Bind ViewModel.Laptops, Mode=OneWay}"
+                         SelectedItem="{x:Bind ViewModel.SelectedLaptop, Mode=TwoWay}"
                          SelectionMode="Single">
                     <GridView.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -150,7 +152,7 @@
                                                                             Foreground="White"
                                                                             Padding="16,8"
                                                                             CornerRadius="4"
-                                                                            Command="{Binding AddSpecCommand}"
+                                                                            Command="{Binding ElementName=page, Path=ViewModel.AddSpecCommand}"
                                                                             IsTabStop="True"
                                                                             Margin="0,0,0,10"
                                                                             HorizontalAlignment="Center">
@@ -249,23 +251,26 @@
                                                                           Orientation="Horizontal" 
                                                                           HorizontalAlignment="Center"
                                                                           Margin="0,0,0,20"
-                                                                          Spacing="12"
+                                                                          Spacing="8"
                                                                           IsHitTestVisible="True">
                                                                     <Button Style="{ThemeResource AccentButtonStyle}"
-                                                                            Padding="16,8"
-                                                                            CornerRadius="4"
-                                                                            Command="{Binding EditCommand}"
-                                                                            IsTabStop="True">
-                                                                        <StackPanel Orientation="Horizontal">
-                                                                            <FontIcon Glyph="&#xE70F;" FontSize="12"/>
-                                                                            <TextBlock Text="Chỉnh sửa" Margin="8,0,0,0"/>
-                                                                        </StackPanel>
-                                                                    </Button>
-                                                                    <Button Background="#E81123"
+                                                                            Background="#007BFF"
                                                                             Foreground="White"
                                                                             Padding="16,8"
                                                                             CornerRadius="4"
-                                                                            Command="{Binding DeleteCommand}"
+                                                                            Command="{Binding ElementName=page, Path=ViewModel.EditCommand}"
+                                                                            IsTabStop="True">
+                                                                        <StackPanel Orientation="Horizontal">
+                                                                            <FontIcon Glyph="&#xE70F;" FontSize="12"/>
+                                                                            <TextBlock Text="Sửa" Margin="8,0,0,0"/>
+                                                                        </StackPanel>
+                                                                    </Button>
+                                                                    <Button Style="{ThemeResource AccentButtonStyle}"
+                                                                            Background="#DC3545"
+                                                                            Foreground="White"
+                                                                            Padding="16,8"
+                                                                            CornerRadius="4"
+                                                                            Command="{Binding ElementName=page, Path=ViewModel.DeleteCommand}"
                                                                             IsTabStop="True">
                                                                         <StackPanel Orientation="Horizontal">
                                                                             <FontIcon Glyph="&#xE74D;" FontSize="12"/>
@@ -458,13 +463,13 @@
                                                       Orientation="Horizontal" 
                                                       HorizontalAlignment="Center"
                                                       Margin="0,24,0,0"
-                                                      Spacing="12">
+                                                      Spacing="8">
                                                 <Button Style="{ThemeResource AccentButtonStyle}"
                                                         Background="#28A745"
                                                         Foreground="White"
                                                         Padding="16,8"
                                                         CornerRadius="4"
-                                                        Command="{Binding AddSpecCommand}"
+                                                        Command="{Binding ElementName=page, Path=ViewModel.AddSpecCommand}"
                                                         IsTabStop="True">
                                                     <StackPanel Orientation="Horizontal">
                                                         <FontIcon Glyph="&#xE710;" FontSize="12"/>
@@ -472,20 +477,23 @@
                                                     </StackPanel>
                                                 </Button>
                                                 <Button Style="{ThemeResource AccentButtonStyle}"
-                                                        Padding="16,8"
-                                                        CornerRadius="4"
-                                                        Command="{Binding EditCommand}"
-                                                        IsTabStop="True">
-                                                    <StackPanel Orientation="Horizontal">
-                                                        <FontIcon Glyph="&#xE70F;" FontSize="12"/>
-                                                        <TextBlock Text="Chỉnh sửa" Margin="8,0,0,0"/>
-                                                    </StackPanel>
-                                                </Button>
-                                                <Button Background="#E81123"
+                                                        Background="#007BFF"
                                                         Foreground="White"
                                                         Padding="16,8"
                                                         CornerRadius="4"
-                                                        Command="{Binding DeleteCommand}"
+                                                        Command="{Binding ElementName=page, Path=ViewModel.EditCommand}"
+                                                        IsTabStop="True">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <FontIcon Glyph="&#xE70F;" FontSize="12"/>
+                                                        <TextBlock Text="Sửa" Margin="8,0,0,0"/>
+                                                    </StackPanel>
+                                                </Button>
+                                                <Button Style="{ThemeResource AccentButtonStyle}"
+                                                        Background="#DC3545"
+                                                        Foreground="White"
+                                                        Padding="16,8"
+                                                        CornerRadius="4"
+                                                        Command="{Binding ElementName=page, Path=ViewModel.DeleteCommand}"
                                                         IsTabStop="True">
                                                     <StackPanel Orientation="Horizontal">
                                                         <FontIcon Glyph="&#xE74D;" FontSize="12"/>
