--- a/StormPC/StormPC/App.xaml
+++ b/StormPC/StormPC/App.xaml
@@ -2,7 +2,8 @@
     x:Class="StormPC.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:helpers="using:StormPC.Core.Helpers">
+    xmlns:helpers="using:StormPC.Core.Helpers"
+    xmlns:basedata="using:StormPC.Views.BaseData">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -49,6 +50,8 @@
                 <Setter Property="Margin" Value="0,0,0,16" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
             </Style>
+
+            <basedata:BoolToSelectionModeConverter x:Key="BoolToSelectionModeConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
