--- a/StormPC/StormPC/Views/Settings/SettingsPage.xaml
+++ b/StormPC/StormPC/Views/Settings/SettingsPage.xaml
@@ -23,8 +23,9 @@
 
         <StackPanel
             Grid.Row="1" 
-            x:Name="ContentArea">
-
+            x:Name="ContentArea"
+            Margin="20,0,20,0"> <!-- Thêm khoảng cách ở đây -->
+            
             <TextBlock x:Uid="Settings_Personalization" Style="{ThemeResource SubtitleTextBlockStyle}"/>
             <StackPanel Margin="{StaticResource SmallTopBottomMargin}">
                 <TextBlock x:Uid="Settings_Theme"/>
@@ -78,4 +79,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Page> 
+</Page>
