feat(ui): add infographic logo and update ShellPage layout
- Introduced a new infographic logo for branding.
- Adjusted ShellPage layout by setting CompactPaneLength and OpenPaneLength for improved navigation experience.

--- a/StormPC/StormPC/Views/Shell/ShellPage.xaml
+++ b/StormPC/StormPC/Views/Shell/ShellPage.xaml
@@ -32,6 +32,8 @@
                         SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
                         IsSettingsVisible="True"
                         PaneTitle="Storm PC"
+                        CompactPaneLength="48"
+                        OpenPaneLength="250"
                         DisplayModeChanged="NavigationViewControl_DisplayModeChanged">
             
             <NavigationView.AutoSuggestBox>
